fix: :bug: fixed database bug and add p_juridica api
